feat: show certain question

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,13 +1,16 @@
-<h1><%= t('.TESTS') %></h1>
+<h2><%= t('.tests:') %></h2>
 
-<table class="table table-striped mt-3">
-  <tr>
-    <th><%= t('.title') %></th>
-    <th><%= t('.category') %></th>
-    <th><%= t('.level') %></th>
-    <th><%= t('.actions') %></th>
-  </tr>
+<p>
+  <strong><%= t('.title') %></strong>
 
+</p>
 
-  
-</table>
+<p>
+  <strong><%= t('.category') %></strong>
+
+</p>
+
+<p>
+  <strong><%= t('.level') %></strong>
+
+</p>
