--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,10 @@
 <h1>Create New Question</h1>
-<form action="/questions" method="post">
+<form action="questions/" method="post">
 <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+
+<label for="test-test_id">test_id:</label>
+<input type="text" name="test[test_id]" id="test-test_id"> 
+</p><br>
 <p>
 <label for="question-body">Body:</label>
 <br>
