--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,11 @@
-<h2>Question</h2>
+<h2><%= t('.question_show') %></h2>
 
 <p>
-  <strong>Question:</strong>
+  <strong><%= t('.question_test:') %></strong>
+  <%= @question.test.title %>
+</p>
+
+<p>
+  <strong><%= t('.question_body:') %></strong>
   <%= @question.body %>
 </p>
