feat: added create question.new

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -5,7 +5,9 @@
   <%= @test.title %>
 </p>
 
-<p>
   <strong><%= t('.test_questions:') %></strong>
+  <br/>
   <%= @test.questions %>
+
+  <%# <%= render json:{ Questions: Question.all}%>
 </p>
