--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,16 +1,10 @@
 <h2><%= t('.tests:') %></h2>
 
-<p>
-  <strong><%= t('.title') %></strong>
-
-</p>
-
-<p>
-  <strong><%= t('.category') %></strong>
-
-</p>
-
-<p>
-  <strong><%= t('.level') %></strong>
-
-</p>
+<table class="table table-striped mt-3">
+  <tr>
+    <th><%= t('.category') %></th>
+    <th><%= t('.title') %></th>
+    <th><%= t('.level') %></th>
+  </tr>
+  
+</table>
