feat: added count@test.questions.count

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -7,7 +7,7 @@
 
   <strong><%= t('.test_questions:') %></strong>
   <br/>
-  <%= @test.questions %>
+  <%= @test.questions.count%>
 
   <%# <%= render json:{ Questions: Question.all}%>
 </p>
