--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -2,15 +2,11 @@
 <form action="/tests/<%=params[:test_id]%>/questions" method="post">
 <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 
-<label for="test-test_id">test_id:</label>
-<input type="integer" name="test[test_id]" id="test-test_id"> 
-</p><br>
 <p>
-<label for="question-body">body:</label>
+<label for="question-body">Body:</label>
 <br>
 <textarea class="form-control" name="question[body]" id="question-body" rows="3"></textarea>
-</p><br>
-<p>
+</p>
 
 <input type="submit" value="Create">
 </form>
