--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,14 +1,15 @@
 <h2><%= t('.tests:') %></h2>
 
-<p>
-  <strong><%= t('.number_of_tests:') %></strong>
-  <%= @tests.count%>
-  </br>
-<strong><%= t('.tests_title:') %></strong>
-</br>
-<% @tests.each do |i|%>
-<%= i.title%>
-</br>
-<% end%>
-</p>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Level</th>
+  </tr>
+
+  <% @tests.each do |test| %>
+    <tr>
+      <td><%= test.title %></td>
+      <td><%= test.level %></td>
+    </tr>
+  <% end %>
 </table>
