--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -1,23 +1,25 @@
 <h1>Create New Test</h1>
-<form action="/tests" method="post">
-<input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+<%= form_with model: @test, local: true do |f| %>
 
-<label for="test-author_id">author_id:</label>
-<input type="integer" name="test[author_id]" id="test-author_id"> 
-</p><br>
-
-<label for="test-category_id">category_id:</label>
-<input type="integer" name="test[category_id]" id="test-category_id"> 
-</p><br>
-
-<p>
-<label for="test-title">title:</label>
-<input type="text" name="test[title]" id="test-title"> 
-</p><br>
-<p>
-<label for="test-level">level:</label>
-<input type="integer" name="test[level]" id="test-level"> 
-</p><br>
-
-<input type="submit" value="Create">
-</form>
+  <p>
+    <%= f.label :title, class: "form-label" %>        
+    <%= f.text_field :title, class: 'form-control form-control-sm', required: true %>
+  </p>
+  <p>
+    <%= f.label :level, class: "form-label" %>        
+    <%= f.number_field :level, class: 'form-control form-control-sm', required: true %>
+  </p>
+  <p>
+    <%= f.label :time_limit, class: "form-label" %>        
+    <%= f.number_field :time_limit, class: 'form-control form-control-sm', required: true %>
+  </p>
+  <p>
+    <%= f.label :category_id, class: "form-label" %>        
+    <%= f.collection_select :category_id, Category.all, :id, :title, 
+    { prompt: true }, class:"form-select form-select-sm", required: true %>
+  </p>
+  <p>
+    <%= f.submit class:"btn btn-primary"%>
+    <%= link_to t('actions.back'), :back, class: "btn btn-secondary" %>
+  </p>
+<% end %>
