--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,1 +1,10 @@
 <h2><%= t('.test_show') %></h2>
+<p>
+  <strong>Title:</strong>
+  <%= @test.title %>
+</p>
+
+<p>
+  <strong>Level:</strong>
+  <%= @test.level %>
+</p>
