--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -1,25 +1,2 @@
 <h1>Create New Test</h1>
-<%= form_with model: @test, local: true do |f| %>
-
-  <p>
-    <%= f.label :title, class: "form-label" %>        
-    <%= f.text_field :title, class: 'form-control form-control-sm', required: true %>
-  </p>
-  <p>
-    <%= f.label :level, class: "form-label" %>        
-    <%= f.number_field :level, class: 'form-control form-control-sm', required: true %>
-  </p>
-  <p>
-    <%= f.label :time_limit, class: "form-label" %>        
-    <%= f.number_field :time_limit, class: 'form-control form-control-sm', required: true %>
-  </p>
-  <p>
-    <%= f.label :category_id, class: "form-label" %>        
-    <%= f.collection_select :category_id, Category.all, :id, :title, 
-    { prompt: true }, class:"form-select form-select-sm", required: true %>
-  </p>
-  <p>
-    <%= f.submit class:"btn btn-primary"%>
-    <%= link_to t('actions.back'), :back, class: "btn btn-secondary" %>
-  </p>
-<% end %>
+<%= render 'form' %>
