--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,16 +1,6 @@
 <p>
 <%= link_to 'New test', new_test_path %>
-<%# <%= link_to 'Back', edit_test_path %> %>
+<%# <%= link_to 'Back', edit_test_path %>
 </p>
 
-
-<h2><%= t('.tests:') %></h2>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Level</th>
-     <th colspan="3">Actions</th>
-  </tr>
-
  <%= render 'tests'%>
-</table>
