--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -1,26 +1,27 @@
-<%= form_with model: [:test, @test], local: true do |f| %>
+<%= form_with model: @test do |form| %>
 
  <%# <%= render 'shared/errors', resource: @test%> 
 
   <p>
-    <%= f.label :title, class: "form-label" %>        
-    <%= f.text_field :title, class: 'form-control form-control-sm', required: true %>
+    <%= form.label :title, class: "form-label" %>        
+    <%= form.text_field :title, class: 'form-control form-control-sm', required: true %>
   </p>
   <p>
-    <%= f.label :level, class: "form-label" %>        
-    <%= f.number_field :level, class: 'form-control form-control-sm', required: true %>
+    <%= form.label :level, class: "form-label" %>        
+    <%= form.number_field :level, class: 'form-control form-control-sm', required: true %>
   </p>
   <p>
-    <%= f.label :time_limit, class: "form-label" %>        
-    <%= f.number_field :time_limit, class: 'form-control form-control-sm', required: true %>
-  </p>
-  <p>
-    <%= f.label :category_id, class: "form-label" %>        
-    <%= f.collection_select :category_id, Category.all, :id, :title, 
+    <%= form.label :category_id, class: "form-label" %>        
+    <%= form.collection_select :category_id, Category.all, :id, :title, 
     { prompt: true }, class:"form-select form-select-sm", required: true %>
   </p>
   <p>
-    <%= f.submit class:"btn btn-primary"%>
+    <%= form.label :author_id, class: "form-label" %>        
+    <%= form.collection_select :author_id, User.all, :id, :user, 
+    { prompt: true }, class:"form-select form-select-sm", required: true %>
+  </p>
+  <p>
+    <%= form.submit class:"btn btn-primary"%>
     <%= link_to t('actions.back'), :back, class: "btn btn-secondary" %>
   </p>
 <% end %>
