--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_with model: @test do |form| %>
- <%# <%= render 'shared/errors', resource: @test%> 
+<%= form_with model: @test, local: true do |form| %>
+ <%= render 'shared/errors', resourse: @test%> 
   <p>
     <%= form.label :title, class: "form-label" %>        
     <%= form.text_field :title, class: 'form-control form-control-sm', required: true %>
