--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,6 +1,4 @@
-<p>
-<%= link_to 'New test', new_test_path %>
-<%# <%= link_to 'Back', edit_test_path %>
-</p>
+<p><%= link_to 'New test', new_test_path %></p>
+
 
  <%= render 'tests'%>
