--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [@test, @question] do |form| %>
+<%= form_with(model: [@test, @question], local: true) do |form| %>
 <%= render 'shared/errors', resourse: @question%> 
 <p>
   <strong><%= t('.question_for_test:') %></strong>
