--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,14 +1,5 @@
+
 <h2><%= t('.test_questions') %></h2>
-
-<p>
-  <strong><%= t('.test_title:') %></strong>
-  <%= @test.title %>
-</p>
-
-  <strong><%= t('.test_questions:') %></strong>
-  <br/>
-  <%= @test.questions.count%>
-  
-
-  <%# <%= render json:{ Questions: Question.all}%>
-</p>
+<p><strong>Test:</strong> <%= @test.title %></p>
+<p><strong>Questions:</strong>  <%= @test.questions.count %></p>
+<%= link_to 'New question', new_test_question_path %>
