--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,8 +1,8 @@
-  <h2><%= t('.test_show') %></h2>
-  <p><strong>title:</strong> <%= @test.title %></p>
-  <p><strong>level:</strong>  <%= @test.level %></p>
-  <p><strong>questions:</strong> <%= @test.questions.count %></p>
-
-  <p><%= link_to t('actions.back'), :back, class: "btn btn-secondary" %></p>
-
+<h2><%= t('.test_show') %></h2>
+<p><strong>title:</strong> <%= @test.title %></p>
+<p><strong>level:</strong>  <%= @test.level %></p>
+<p><strong>Questions:</strong>  <%= @test.questions.count %></p>
   
+<%# <%=  render @test.questions %> 
+<p><%= link_to t('actions.back'), :back, class: "btn btn-secondary" %></p>
+
