--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -2,7 +2,10 @@
 <p><strong>title:</strong> <%= @test.title %></p>
 <p><strong>level:</strong>  <%= @test.level %></p>
 <p><strong>Questions:</strong>  <%= @test.questions.count %></p>
-  
-<%# <%=  render @test.questions %> 
+
+<%# <%= link_to 'show questions', test_questions_path %> 
+
+<%=  render @test.questions %> 
+
 <p><%= link_to t('actions.back'), :back, class: "btn btn-secondary" %></p>
 
