feat: added helpers for creating/editing questions

--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,2 +1,3 @@
-<h3>Creating a new question for the test: <%= @question.test.title %> </h3>
+
+<%= question_header(@question)%>
 <%= render 'form' %>
