--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,12 +1,9 @@
 <%= form_with(model: [@test, @question], local: true) do |form| %>
 <%= render 'shared/errors', resourсe: @question%> 
-<p>
-  <strong><%= t('.question_for_test:') %></strong>
-  <%= form.label :test %>: <%= @question.test.title %>
-</p>
+
  <p>
     <%= form.label :question_text %>:<br>
-    <%= form.text_field :body %>
+    <%= form.text_area :body, :rows => 4, :cols => 50 %>
   </p>
   <p>
     <%= form.submit %>
