--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,4 +2,4 @@
 <h2><%= t('.test_questions') %></h2>
 <p><strong>Test:</strong> <%= @test.title %></p>
 <p><strong>Questions:</strong>  <%= @test.questions.count %></p>
-<%= link_to 'New question', new_test_question_path %>
+<%= render @test.questions %> 
