fix: fixed links, destroy does not work

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,6 @@
 
 <h2><%= t('.test_questions') %></h2>
-<p><strong>Test:</strong> <%= @test.title %></p>
-<p><strong>Questions:</strong>  <%= @test.questions.count %></p>
 <%= render @test.questions %> 
+
+<%= link_to 'New question', new_test_question_path(@test) %>
+
