--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -20,6 +20,7 @@
   </p>
   <p>
     <%= form.submit class:"btn btn-primary"%>
-    <%= link_to t('actions.back'), :back, class: "btn btn-secondary" %>
+    <%= link_to t('.back'), tests_path %>
   </p>
 <% end %>
+
