--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,5 +1,4 @@
+<h2>ALL TESTS:</h2>
+<%= render @tests%>
 
 <p><%= link_to 'New test', new_test_path %></p>
-
-<h2>TESTS:</h2>
- <%= render @tests%>
