--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,11 +1,9 @@
-<h2><%= t('.question_show') %></h2>
+<h1><%= @question.test.title %> Question</h1>
 
 <p>
-  <strong><%= t('.question_test:') %></strong>
-  <%= @question.test.title %>
-</p>
-
-<p>
-  <strong><%= t('.question_body:') %></strong>
+  <strong>Question:</strong>
   <%= @question.body %>
 </p>
+
+<%= link_to 'Back to test details', test_path(@question.test) %> |
+<%= link_to t('actions.edit'), edit_question_path %> 
