--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,10 +1,11 @@
 
-  <table>
-    <tr>
-      <td> <strong>title:</strong> <%= test.title %></td>
-      <td> <strong>level:</strong> <%= test.level %> </td>
-      <td> <strong>questions:</strong> <%= test.questions.count %> </td>
-    </tr>
-  </table>
-  
+<table>
+<tr>
+<td> <strong>title:</strong> <%= test.title %></td>
+<td> <strong>level:</strong> <%= test.level %> </td>
+<td> <strong>questions:</strong> <%= test.questions.count %> </td>
+<td> <%= link_to t('actions.edit'), edit_test_path(test)%> </td>  
+<td> <%= link_to t('actions.show'), test_path(test)%> </td>  
+</tr>
+
   
