--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -6,10 +6,9 @@
 <td>
     <%= link_to t('actions.show'), question_path(question) %> |
     <%= link_to t('actions.edit'), edit_question_path(question) %> |
-    <%= link_to t('actions.destroy'), question_path(question),
-                method: :delete,
-                data: { confirm: t('actions.confirm') },
-                class: "btn btn-outline-danger btn-sm" %>
+    <%= link_to t('actions.delete'), question_path(question), 
+        method: :delete, 
+        data: { confirm: 'Are you sure?' } %>
   </td>      
 </tr>
 </table>
