--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <hr>
     <h3>About Test Guru</h3>
-    <%= link_to 'Test-Guru by Eduard Gimaev on the github', github_url('Eduard-Gimaev', 'test-guru'),target: "_blank" %><br>
+    <%= link_to 'Test-Guru by Eduard Gimaev on the github', github_url('Eduard-Gimaev', 'test-guru')%><br>
     <a href="https://thinknetica.com/">Educational project in the online school Thinknetica</a>
   <hr>
      <p><%= current_year %></p>
