--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,9 +1,8 @@
 <h1><%= @question.test.title %> Question</h1>
 
-<p>
-  <strong>Question:</strong>
-  <%= @question.body %>
-</p>
+<p> <strong>Question:</strong> <%= @question.body %></p>
 
-<%= link_to 'Back to test details', test_path(@question.test) %> |
+
+<%= link_to 'Back to details', test_path(@question.test) %> |
 <%= link_to t('actions.edit'), edit_question_path %> 
+<%= link_to 'New answer', new_question_answer_path(@question) %>
