--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,4 +1,11 @@
-<h2>ALL TESTS:</h2>
-<%= render @tests%>
+
+<table>
+  <caption>TESTS:</caption>
+  <tr>
+  <th>Title</th>
+  <th colspan="4">Actions</th>
+  </tr>
+  <%= render @tests%>
+</table>
 
 <p><%= link_to 'New test', new_test_path %></p>
