--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Details of the test: <%= @test.title %></h2>
+<h2><%= @test.title %> / Details:</h2>
 <%=  render @test.questions %> 
 </br>
 <%= link_to t('.all_tests'), tests_path %> |
