--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,8 +1,8 @@
-<li>
-  <%= answer.body %><br>
-  <%= link_to 'Show', answer_path(answer) %>
-  <%= link_to 'Edit', edit_answer_path(answer) %>
-  <%= link_to 'Delete', answer_path(answer),
+<tr>
+    <td><strong><%= answer.body  %></strong></td>
+    <td><%= link_to 'Show', answer_path(answer) %></td>
+    <td><%= link_to 'Edit', edit_answer_path(answer) %></td>
+    <td><%= link_to 'Delete', answer_path(answer),
                method: :delete,
-               data: { confirm: 'Are you sure?' } %>
-</li>
+               data: { confirm: 'Are you sure?' } %></td>
+</tr>
