--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_with model: [@question, @answer], local: true do |form| %>
-  <%= render 'shared/errors', resource: @answer %>
+<%= form_with(model: [@question, @answer], local: true) do |form| %>
+<%# <%= render 'shared/errors', resource: @answer %> 
 
   <p>
-    <%= form.label :body %>
+    <%= form.label :answer_text %>:<br>
     <%= form.text_area :body, id: :answer_body, rows: 7, cols: 60 %>
   </p>
 
@@ -11,5 +11,7 @@
     <%= form.check_box :correct, id: :answer_correct %>
   </p>
 
-  <p><%= form.submit %></p>
+  <p><%= form.submit %>
+  <%= link_to 'Back', question_path(@question) %>
+  </p>
 <% end %>
