--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,8 +1,12 @@
-<h1><%= @question.test.title %> Question</h1>
-
-<p> <strong>Question:</strong> <%= @question.body %></p>
-
-
+<h2><%= @question.test.title %> Question details:</h2>
+<table border = "1">
+  <th colspan="5"><strong><%= @question.body %></strong> </th>
+  <tr>
+  <th>Answer</th>
+  <th colspan="4">Actions</th>
+  </tr>
+  <%= render @question.answers%>
+</table>
+</br>
 <%= link_to 'Back to details', test_path(@question.test) %> |
-<%= link_to t('actions.edit'), edit_question_path %> 
-<%= link_to 'New answer', new_question_answer_path(@question) %>
+<%= link_to 'New answer', new_question_answer_path(@question) %> |
