--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,7 +1,11 @@
 <h1>Passing the <%= @test_passage.test.title %>Test</h1>
 
 <b>
-  <%= @test_passage.current_question.body %> 
+  ( 
+  <%= @test_passage.current_question_number %> of
+  <%= @test_passage.test.questions.count %> 
+  )
+  <%= @test_passage.current_question.body %>
 </b>
 
 <%= form_with url: test_passage_path(@test_passage), local: true, method: :put do |form| %>
@@ -12,5 +16,8 @@
     </p>
   <% end %>
 
-  <p><%= form.submit 'Next' %></p>
+  <p><%= form.submit 'Next' %> |
+     <%= link_to t('.all_tests'), tests_path %> |
+  </p>
+
 <% end %>
