--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -16,8 +16,9 @@
     </p>
   <% end %>
 
-  <p><%= form.submit 'Next' %> |
+  <p>
      <%= link_to t('.all_tests'), tests_path %> |
+     <%= form.submit 'Next' %> |
   </p>
 
 <% end %>
