fix:logic is completed except while creating  answer.correct:0/1 insted of t/f

--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -11,7 +11,5 @@
     <%= form.check_box :correct, id: :answer_correct %>
   </p>
 
-  <p><%= form.submit %>
-  <%= link_to 'Back', question_path(@question) %>
-  </p>
+  <p><%= form.submit %></p>
 <% end %>
