--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,12 +1,13 @@
- <% if resource.present? && resource.errors.any? %>
-    <div>
-      <h2><%= pluralize(resourсe.errors.count, 'error') %> detected:</h2>
-      <ul>
-        <% resourсe.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<% if resource.present? && resource.errors.any? %>
+  <%= content_tag :div, class: 'resource-errors', data: { resource_id: resource.id } do %>
+    <h2>
+      <%= t('.header', count: resource.errors.count) %>
+    </h2>
 
-  
+    <ul>
+      <% resource.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+<% end %>
