feat: added welocome for logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <p class="nav user">Welcome, <b><%= current_user.user %>(<%= current_user.user %>)</b></p>
+    <% end %>
+
     <%= yield %>
     <%= render 'shared/footer' %>
   </body>
