--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -9,9 +9,9 @@
   </tr>
 <%= render @tests%>
 </table>
-<% unless logged_in? %>
+<% unless user_signed_in? %>
   <p>
-  | <%= link_to 'Log in', login_path %> |
-  <%= link_to 'Sign up', signup_path %> |
+  | <%= link_to 'Log in', new_user_session_path %> |
+  <%= link_to 'Sign up', new_user_registration_path %> |
   </p>
 <% end %>
