--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <% if user_signed_in? %>
-      <p class="nav user">Welcome, <b><%= current_user.name current_user.surname %></b></p>
+      <p class="nav user">Welcome, <b><%= current_user.email %></b></p>
       <p class="nav signout"> <%= link_to 'logout', destroy_user_session_path,
                 method: :delete,
                 data: { confirm: 'Are you sure to logout?' }  %> </p>
