feat: added questions and answers to admin

--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,9 +1,11 @@
 <table border = "1">
 <caption>TESTS:</caption>
-  
+  <tr>
+  <th colspan="5"><%= link_to 'New test', new_admin_test_path %></th>
+  </tr>
   <tr>
   <th>Title</th>
-  <th>Actions</th>
+  <th colspan="4">Actions</th>
   </tr>
 <%= render @tests%>
 </table>
