--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [@test, @question], local: true) do |form| %>
+<%= form_with(model: [:admin, @test, @question], local: true) do |form| %>
 <%# <%= render 'shared/errors', resourсe: @question%>  %>
 
  <p>
@@ -7,6 +7,6 @@
   </p>
   <p>
     <%= form.submit %>
-    <%= link_to t('.back'), tests_path %>
+    <%= link_to t('.back'), admin_tests_path %>
   </p>
 <% end %>
