--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -8,5 +8,5 @@
   <%= render @question.answers%>
 </table>
 </br>
-<%= link_to 'Back to details', test_path(@question.test) %> |
-<%= link_to 'New answer', new_question_answer_path(@question) %> |
+<%= link_to 'Back to details', admin_test_path(@question.test) %> |
+<%= link_to 'New answer', new_admin_question_answer_path(@question) %> |
