--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @test, local: true do |form| %>
+<%= form_with model: [:admin, @test], local: true do |form| %>
 
   <p>
     <%= form.label :title, class: "form-label"  %>        
@@ -13,14 +13,10 @@
     <%= form.collection_select :category_id, Category.all, :id, :title, 
     { prompt: true }, class:"form-select form-select-sm", required: true %>
   </p>
-  <p>
-    <%= form.label :author_id, class: "form-label" %>        
-    <%= form.collection_select :author_id, User.all, :id, :user, 
-    { prompt: true }, class:"form-select form-select-sm", required: true %>
-  </p>
+  
   <p>
     <%= form.submit class:"btn btn-primary"%>
-    <%= link_to t('.back'), tests_path %>
+    <%= link_to t('.back'), admin_tests_path %>
   </p>
 <% end %>
 
