--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -8,6 +8,6 @@
     <%= render @test.questions %>
 </table>
 </br>
-<%= link_to t('.all_tests'), tests_path %> |
-<%= link_to 'New question', new_test_question_path(@test) %> |
+<%= link_to t('.all_tests'), admin_tests_path %> |
+<%= link_to 'New question', new_admin_test_question_path(@test) %> |
 
