fix: adjusted views questions && answers for admin

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,8 +8,7 @@
   </head>
   <body>
     <%= render 'admin/nav' %>
-    <%= render 'shared/flash' %>
-
     <%= yield %>
+    <%= render 'shared/footer' %>
     </body>
 </html>
