--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -1,8 +1,8 @@
 <div class="nav nav-admin">
-  <span class="nav-admin title">TestGuru Admin Panel</span>
+  <span class="nav-admin title">TestGuru | AdminKa </span>
 
   <div class="nav-admin user">
-    Welcome Admin, <b class="nav-admin user-email"><%= current_user.email %></b>
+    Welcome, <b class="nav-admin user-email"><%= current_user.email %> | </b>
     <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
   </div>
 </div>
