--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
 
   <body>
     <% if user_signed_in? %>
-      <p class="nav user">Welcome, <b><%= current_user.email %></b></p>
-      <p class="nav signout"> <%= link_to 'logout', destroy_user_session_path, method: :delete %> </p>
+      <p class="nav signout"> <b><%= current_user.email %></b> | 
+      <%= link_to 'logout', destroy_user_session_path, method: :delete %> </p>
     <% end %>
 
     <%= flash_message %>
