--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: [:admin, @test, @question], local: true) do |form| %>
-<%# <%= render 'shared/errors', resourсe: @question%>  %>
+<%# <%= render 'shared/errors', resourсe: @question%>
 
  <p>
     <%= form.label :question_text %>:<br>
