--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,17 +1,14 @@
-<h1><% t("tests.index.header") %><h1/>
-
 <table border = "1">
-<caption>TESTS:</caption>
-  
+  <caption><%= t('.header') %>:</caption>
   <tr>
-  <th>Title</th>
-  <th>Actions</th>
+    <th><%= t('.title') %></th>
+    <th><%= t('.actions') %></th>
   </tr>
-<%= render @tests%>
+  <%= render @tests %>
 </table>
 <% unless user_signed_in? %>
   <p>
-  | <%= link_to 'Log in', new_user_session_path %> |
-  <%= link_to 'Sign up', new_user_registration_path %> |
+  | <%= link_to t('.login'), new_user_session_path %> |
+  <%= link_to t('.signup'), new_user_registration_path %> |
   </p>
 <% end %>
