--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -11,5 +11,6 @@
     <%= form.check_box :correct, id: :answer_correct %>
   </p>
 
-  <p><%= form.submit %></p>
+  <p><%= form.submit %> | <%= link_to 'Back', admin_question_path(@answer.question) %></p>
+  
 <% end %>
