feat: localization is done except mailer

--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -7,6 +7,6 @@
   </p>
   <p>
     <%= form.submit %>
-    <%= link_to t('.back'), admin_tests_path %>
+    <%= link_to t('action.back'), admin_tests_path %>
   </p>
 <% end %>
