--- a/app/views/admin/answers/_answer.html.erb
+++ b/app/views/admin/answers/_answer.html.erb
@@ -1,8 +1,8 @@
 <tr>
     <td><strong><%= answer.body  %></strong></td>
-    <td><%= link_to 'Show', admin_answer_path(answer) %></td>
-    <td><%= link_to 'Edit', edit_admin_answer_path(answer) %></td>
-    <td><%= link_to 'Delete', admin_answer_path(answer),
+    <td><%= link_to t('actions.show'), admin_answer_path(answer) %></td>
+    <td><%= link_to t('actions.edit'), edit_admin_answer_path(answer) %></td>
+    <td><%= link_to t('actions.delete'), admin_answer_path(answer),
                 method: :delete,
-                data: { confirm: 'Are you sure?' } %></td>
+                data: { confirm: t('actions.confirm') } %></td>
 </tr>
