--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -11,6 +11,6 @@
     <%= form.check_box :correct, id: :answer_correct %>
   </p>
 
-  <p><%= form.submit %> | <%= link_to 'Back', admin_question_path(@answer.question) %></p>
+  <p><%= form.submit %> | <%= link_to t('actions.back'), admin_question_path(@answer.question) %></p>
   
 <% end %>
