--- a/app/views/admin/answers/edit.html.erb
+++ b/app/views/admin/answers/edit.html.erb
@@ -1,5 +1,3 @@
-<p>
-  <%= @answer.question.body %>
-</p>
-
+<h3><%= t('.header') %></h3>
+<p><%= @answer.question.body %></p>
 <%= render 'form' %>
