--- a/app/views/admin/answers/show.html.erb
+++ b/app/views/admin/answers/show.html.erb
@@ -1,10 +1,6 @@
-<h1>Question</h1>
-<p><%= @answer.question.body %></p>
 
-<p><b>Answer:</b>
-<%= @answer.body %></p>
+<h3><%= t('.header') %></h3>
+<p><b><%= t('.answer') %></b> <%= @answer.body %></p>
+<p><b><%= t('.correct') %></b> <%= @answer.correct %></p>
 
-<p><b>Correct:</b>
-<%= @answer.correct %></p>
-
-<%= link_to 'Back', admin_question_path(@answer.question) %>
+<%= link_to t('actions.back'), admin_question_path(@answer.question) %>
