--- a/app/views/admin/questions/_question.html.erb
+++ b/app/views/admin/questions/_question.html.erb
@@ -4,7 +4,7 @@
     <td><%= link_to t('actions.edit'), edit_admin_question_path(question) %></td>
     <td><%= link_to t('actions.delete'), admin_question_path(question), 
         method: :delete, 
-        data: { confirm: 'Are you sure?' } %></td>
+        data: { confirm: t('actions.confirm') } %></td>
 </tr>
 
 
