--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,12 +1,15 @@
-<h2><%= @question.test.title %> Question details:</h2>
+<h3><%= t('.header') %></h3>
+
 <table border = "1">
   <th colspan="5"><strong><%= @question.body %></strong> </th>
   <tr>
-  <th>Answer</th>
-  <th colspan="4">Actions</th>
+  <th><%= t('.answer')%></th>
+  <th colspan="4"><%= t('actions.actions')%></th>
   </tr>
   <%= render @question.answers%>
 </table>
 </br>
-<%= link_to 'Back to details', admin_test_path(@question.test) %> |
-<%= link_to 'New answer', new_admin_question_answer_path(@question) %> |
+<%= link_to t('actions.back'), admin_test_path(@question.test) %> |
+<%= link_to t('actions.new_answer'), new_admin_question_answer_path(@question) %> |
+
+
