--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -16,7 +16,7 @@
   
   <p>
     <%= form.submit class:"btn btn-primary"%>
-    <%= link_to t('.back'), admin_tests_path %>
+    <%= link_to t('actions.back'), admin_tests_path %>
   </p>
 <% end %>
 
