--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -2,13 +2,13 @@
   <caption><%= t('.header') %>:</caption>
   <tr>
     <th><%= t('.title') %></th>
-    <th><%= t('.actions') %></th>
+    <th><%= t('actions.actions') %></th>
   </tr>
   <%= render @tests %>
 </table>
 <% unless user_signed_in? %>
   <p>
-  | <%= link_to t('.login'), new_user_session_path %> |
-  <%= link_to t('.signup'), new_user_registration_path %> |
+  | <%= link_to t('actions.login'), new_user_session_path %> |
+  <%= link_to t('actions.signup'), new_user_registration_path %> |
   </p>
 <% end %>
