--- a/app/views/admin/_nav.html.erb
+++ b/app/views/admin/_nav.html.erb
@@ -2,7 +2,7 @@
   <span class="nav-admin title"><%= t('.header') %></span>
 
   <div class="nav-admin user">
-    <%= t('actions.welcome')%><b class="nav-admin user-email"><%= current_user.email %> | </b>
+    <b class="nav-admin user-email"><%= t('actions.welcome', name: current_user.email ) %> | </b>
     <%= link_to t('actions.logout'), destroy_user_session_path, method: :delete %>
   </div>
 </div>
