--- a/app/views/tests_mailer/completed_test.en.html.erb
+++ b/app/views/tests_mailer/completed_test.en.html.erb
@@ -1,5 +1,6 @@
 <h1>Hooray!</h1>
 
 <p>
-  Congratulations! You completed the <b><%= @test.title %></b> test. Why don't you take <%= link_to 'another test', tests_url %>?
+  Congratulations! You completed the <b><%= @test.title %></b> test.
+  Why don't you take <%= link_to 'another test', tests_url %>?
 </p>
