--- a/app/views/tests_mailer/completed_test.en.text.erb
+++ b/app/views/tests_mailer/completed_test.en.text.erb
@@ -1,5 +1,6 @@
 <h1>Hooray!</h1>
 
 <p>
-  Congratulations! You completed the <b><%= @test.title %></b> test. Choose your <%= link_to 'next test', tests_url %>?
+  Congratulations! You completed the <b><%= @test.title %></b> test.
+  Choose your <%= link_to 'next test', tests_url %>?
 </p>
