--- a/app/views/tests_mailer/completed_test.ru.text.erb
+++ b/app/views/tests_mailer/completed_test.ru.text.erb
@@ -2,4 +2,5 @@
 
 =======
 
-Поздравления! Вы завершили "<%= @test.title %>" тест. Выберите Ваш следующий тест: <%= tests_url %>
+Поздравления! Вы завершили "<%= @test.title %>" тест.
+Выберите Ваш следующий тест: <%= tests_url %>
