feat: added ru.yml

--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -16,8 +16,8 @@
   <% end %>
 
   <p>
-     <%= form.submit t('.next') %> |
-     <%= link_to t('.back'), tests_path %> |
+     <%= form.submit t('actions.next') %> |
+     <%= link_to t('actions.back'), tests_path %> |
   </p>
 
 <% end %>
