--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -3,6 +3,6 @@
     <td rowspan="2" ><%= button_to t('actions.start'), start_test_path(test) %> </td> 
   </tr>
   <tr>
-    <td style="font-size:12px" > <%=test_level(test)%> | <%= t('.questions') %>: <%=test.questions.count%></td> 
+    <td style="font-size:12px" > <%=test_level(test)%> | <%= t('.question') %>: <%=test.questions.count%></td> 
   </tr>
 
