--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -1,6 +1,6 @@
 
 <h1><%= t('.header', title: @test_passage.test.title) %></h1>
-<p><%= t('.score', user: current_user.user) %> 
+<p><%= t('.score', user: current_user.email) %> 
 <% if @test_passage.success? %>
   <span class="color_green"><%= @test_passage.correct_answers_count %>
   </span><%= t('.success') %></p>
