feat:added nav shared

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,5 +1,5 @@
-<table border = "1">
-  <caption><%= t('.header') %>:</caption>
+<table border = "0">
+  <tr><%= t('.header') %>:</tr>
   <tr>
     <th><%= t('.title') %></th>
     <th><%= t('actions.actions') %></th>
