--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width", initial-scale=1, shrink-to-fit="no">
+
     <title>TestGuru</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,20 +13,14 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <p class="nav signout"><%=  t('actions.welcome', name: current_user.email ) %>| 
-      <%= link_to t('actions.logout'), destroy_user_session_path, method: :delete %> </p>
-    <% end %>
+    <br/>
+    <%= render 'shared/nav' %>
 
-    <%= flash_message %>
-    <%= yield %>
+    <div class="container">
+      <%= flash_message %>
+      <%= yield %>
+    </div>
     
-    <%unless user_signed_in?%>
-      <p>
-        | <%= link_to t('actions.login'), new_user_session_path %> |
-        <%= link_to t('actions.signup'), new_user_registration_path %> |
-      </p>
-    <% end %>
     <%= render 'shared/footer' %>
   </body>
 </html>
