--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title><%= t('actions.admin') %> | TestGuru</title>
     <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+
   <body>
+    <br/>
     <%= render 'admin/nav' %>
-    <%= yield %>
+
+    <div class="container">
+      <%= flash_message %>
+      <%= yield %>
+    </div>
+    
     <%= render 'shared/footer' %>
-    </body>
+  </body>
 </html>
