--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
-<footer>
-  <hr>
-    <h3><%= t('.header') %></h3>
+<div class="card text-center">
+  <div class="card-footer text-body-secondary">
+    <p><%= t('.header') %></p>
     <%= link_to t('.author'), "https://github.com/Eduard-Gimaev/test-guru"%><br>
     <a href="https://thinknetica.com/"> <%= t('.link')%></a>
-  <hr>
-     <p><%= current_year %></p>
-</footer>
+    <p><%= current_year %></p>
+  </div>
+</div>
