--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,45 +1,42 @@
-<h2><%= t('.header')%></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+<div class="row justify-content-center">
+  <div class="col col-md-4">
+    <h2><%= t('.header')%></h2>
+    <div class="card body-primary">
+      <div class="card-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="form-group">
+            <p>
+              <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: "first name" %>
+            </p>
+            <p>
+              <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: "last name" %>
+            </p>
+            <p>
+              <%= f.text_field :type, autofocus: true, autocomplete: "type", placeholder: "User type" %>
+            </p>
+            <p>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "email" %>
+            </p>
+            <p>
+              <%= f.label :password %>
+              <% if @minimum_password_length %>
+              <em>(<%= t('.min_characters', min: @minimum_password_length )%>)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "new-password" %>
+            </p>
+            <p>
+              <%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+            </p>    
+              <br />
+              <%= f.submit t('actions.signup'), class: "btn btn-primary" %>
+          </div>
+        <% end %>
+        <div class="mt-1">
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :type %><br />
-    <%= f.text_field :type, autofocus: true, autocomplete: "type" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-  
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= t('.min_characters', min: @minimum_password_length )%>)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
