--- a/app/views/admin/answers/_answer.html.erb
+++ b/app/views/admin/answers/_answer.html.erb
@@ -1,8 +1,8 @@
 <tr>
     <td><strong><%= answer.body  %></strong></td>
-    <td><%= link_to t('actions.show'), admin_answer_path(answer) %></td>
-    <td><%= link_to t('actions.edit'), edit_admin_answer_path(answer) %></td>
-    <td><%= link_to t('actions.delete'), admin_answer_path(answer),
+    <td><%= button_to t('actions.show'), admin_answer_path(answer), method: :get %></td>
+    <td><%= button_to t('actions.edit'), edit_admin_answer_path(answer), method: :get %></td>
+    <td><%= button_to t('actions.delete'), admin_answer_path(answer),
                 method: :delete,
                 data: { confirm: t('actions.confirm') } %></td>
 </tr>
