--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -1,16 +1,20 @@
-<%= form_with(model: [:admin, @question, @answer], local: true) do |form| %>
-<%= render 'shared/errors', resource: @answer %>
+<div class="row justify-content-center">
+  <div class="col col-md-4">   
+    <%= form_with(model: [:admin, @question, @answer], local: true) do |form| %>
+    <%= render 'shared/errors', resource: @answer %>
 
-  <p>
-    <%= form.label :answer_text %>:<br>
-    <%= form.text_area :body, id: :answer_body, rows: 7, cols: 60 %>
-  </p>
+      <p>
+        <%= form.label :answer_text %>:<br>
+        <%= form.text_area :body, id: :answer_body, rows: 7, cols: 60 %>
+      </p>
 
-  <p>
-    <%= form.label :correct %>
-    <%= form.check_box :correct, id: :answer_correct %>
-  </p>
+      <p>
+        <%= form.label :correct %>
+        <%= form.check_box :correct, id: :answer_correct %>
+      </p>
 
-  <p><%= form.submit %> | <%= link_to t('actions.back'), admin_question_path(@answer.question) %></p>
-  
-<% end %>
+      <p><%= form.submit %> | <%= link_to t('actions.back'), admin_question_path(@answer.question) %></p>
+      
+    <% end %>
+  </div>       
+</div> 
