--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,12 +1,16 @@
-<%= form_with(model: [:admin, @test, @question], local: true) do |form| %>
-<%# <%= render 'shared/errors', resourсe: @question%>
+<div class="row justify-content-center">
+  <div class="col col-md-4">
+    <%= form_with(model: [:admin, @test, @question], local: true) do |form| %>
+    <%# <%= render 'shared/errors', resourсe: @question%>
 
- <p>
-    <%= form.label :question_text %>:<br>
-    <%= form.text_area :body, :rows => 4, :cols => 50 %>
-  </p>
-  <p>
-    <%= form.submit %>
-    <%= link_to t('action.back'), admin_tests_path %>
-  </p>
-<% end %>
+    <p>
+        <%= form.label :question_text %>:<br>
+        <%= form.text_area :body, :rows => 4, :cols => 50 %>
+      </p>
+      <p>
+        <%= form.submit %>
+        <%= link_to t('action.back'), admin_tests_path %>
+      </p>
+    <% end %>
+  </div>       
+</div> 
