--- a/app/views/admin/questions/_question.html.erb
+++ b/app/views/admin/questions/_question.html.erb
@@ -1,10 +1,10 @@
 <tr>
     <td><%= question.body %></td>
-    <td><%= link_to t('actions.show'), admin_question_path(question) %></td>
-    <td><%= link_to t('actions.edit'), edit_admin_question_path(question) %></td>
-    <td><%= link_to t('actions.delete'), admin_question_path(question), 
-        method: :delete, 
-        data: { confirm: t('actions.confirm') } %></td>
+    <td> <%= button_to t('actions.show'), admin_question_path(question), method: :get %> </td>
+    <td> <%= button_to t('actions.edit'), edit_admin_question_path(question), method: :get %> </td>
+    <td> <%= button_to t('actions.delete'), admin_question_path(question), 
+                method: :delete, 
+                data: { confirm: 'actions.confirm' } %></td>
 </tr>
 
 
