--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,22 +1,26 @@
-<%= form_with model: [:admin, @test], local: true do |form| %>
+<div class="row justify-content-center">
+  <div class="col col-md-4">
+    <%= form_with model: [:admin, @test], local: true do |form| %>
 
-  <p>
-    <%= form.label :title, class: "form-label"  %>        
-    <%= form.text_field :title, class: 'form-control form-control-sm', required: true %>
-  </p>
-  <p>
-    <%= form.label :level, class: "form-label", id: :test_title %>        
-    <%= form.number_field :level, class: 'form-control form-control-sm', required: true%>
-  </p>
-  <p>
-    <%= form.label :category_id, class: "form-label" %>        
-    <%= form.collection_select :category_id, Category.all, :id, :title, 
-    { prompt: true }, class:"form-select form-select-sm", required: true %>
-  </p>
-  
-  <p>
-    <%= form.submit class:"btn btn-primary"%>
-    <%= link_to t('actions.back'), admin_tests_path %>
-  </p>
-<% end %>
+      <p>
+        <%= form.label :title, class: "form-label"  %>        
+        <%= form.text_field :title, class: 'form-control form-control-sm', required: true %>
+      </p>
+      <p>
+        <%= form.label :level, class: "form-label", id: :test_title %>        
+        <%= form.number_field :level, class: 'form-control form-control-sm', required: true%>
+      </p>
+      <p>
+        <%= form.label :category_id, class: "form-label" %>        
+        <%= form.collection_select :category_id, Category.all, :id, :title, 
+        { prompt: true }, class:"form-select form-select-sm", required: true %>
+      </p>
+      
+      <p>
+        <%= form.submit class:"btn btn-primary"%>
+        <%= link_to t('actions.back'), admin_tests_path %>
+      </p>
+    <% end %>
+  </div>  
+</div>    
 
