--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,13 +1,12 @@
 
   <tr>
-    <td><strong><%= test.title %></strong></td>
-    <td rowspan="2" ><%= link_to t('actions.show'), admin_test_path(test)%> </td>
-    <td rowspan="2" ><%= link_to t('actions.edit'), edit_admin_test_path(test)%> </td>
-    <td rowspan="2" ><%= link_to t('actions.delete'), admin_test_path(test), 
-       method: :delete, 
-       data: { confirm: 'actions.confirm' } %>
+    <td> <strong><%= test.title %></strong> </td>
+      <td> <%= button_to t('actions.show'), admin_test_path(test), method: :get %> </td>
+      <td> <%= button_to t('actions.edit'), edit_admin_test_path(test), method: :get %> </td>
+      <td> <%= button_to t('actions.delete'), admin_test_path(test), 
+                  method: :delete, 
+                  data: { confirm: 'actions.confirm' } %></td>
   </tr>
   <tr>
     <td style="font-size:12px" > <%=test_level(test)%> | <%=test.questions.count%></td> 
   </tr>
-
