feat: added methos destoy to admin/gists_controllers

--- a/app/views/admin/gists/index.html.erb
+++ b/app/views/admin/gists/index.html.erb
@@ -5,6 +5,8 @@
       <th ><%= t('.question') %></th>
       <th ><%= t('.url') %></th>
       <th ><%= t('.author') %></th>
+      <th><%= t('.actions') %></th>
+
     </tr>
   </thead>
   <tbody>
