--- a/app/views/admin/gists/_gist.html.erb
+++ b/app/views/admin/gists/_gist.html.erb
@@ -2,4 +2,9 @@
   <td><%= link_to gist.question.body.truncate(25), admin_question_path(gist.question) %></td>
   <td><%= link_to gist.url, gist.url %></td>
   <td><%= gist.user.email %></td>
+  <td>  <%= link_to t('actions.delete'), admin_gist_path(gist),
+                 method: :delete,
+                 data: { confirm: t('actions.confirm') },
+                 class: "btn btn-outline-danger btn-sm" %>
+  </td>
 </tr>
