--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -17,7 +17,7 @@
       </p>
       
       <p>
-        <%= form.submit class:"btn btn-primary"%>
+        <%= form.submit t('actions.submit'), class: 'btn-primary' %>
         <%= link_to t('actions.back'), admin_tests_path %>
       </p>
     <% end %>
