--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -8,7 +8,7 @@
         <%= form.text_area :body, :rows => 4, :cols => 50 %>
       </p>
       <p>
-        <%= form.submit %>
+        <%= form.submit t('actions.submit'), class: 'btn-primary' %>
         <%= link_to t('action.back'), admin_tests_path %>
       </p>
     <% end %>
