--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,12 +1,16 @@
 
   <tr>
-    <td> <strong><%= test.title %></strong> </br>
-      <span style="font-size:12px">
-        <%=test_level(test)%> | <%=test.questions.count%>
-      </span>
+    <td><%= content_tag :span, test.title, class: 'test-title', data: {test_id: test.id} %></br>
+      <span style="font-size:12px"> <%= test_level(test) %> | <%= test.questions.count %> </span>
+      <%= render 'form_inline', test: test == @test ? @test : test %>
     </td>
     <td> <%= button_to t('actions.show'), admin_test_path(test), method: :get %> </td>
-    <td> <%= button_to t('actions.edit'), edit_admin_test_path(test), method: :get %> </td>
+    <td> <%= button_to t('actions.edit'),
+                       edit_admin_test_path(test),
+                       data: {test_id: test.id},
+                       class: 'form-inline-link',
+                       method: :get %> 
+    </td>
     <td> <%= button_to t('actions.delete'), admin_test_path(test), 
                                             method: :delete, 
                                             data: { confirm: 'actions.confirm' } %></td>
