--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -3,6 +3,9 @@
       [ <%= link_to t('actions.new_test'), new_admin_test_path %> ]
       [ <%= link_to t('actions.gist_questions'), admin_gists_path %> ]
     </p>
+    
+  <%= render 'shared/errors', resource: @test %>
+
   <div class="col col-md-4">
     <table class="table table-hover">
       <tr style="text-align:center">
