feat: added toggle for changing test.title

--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,8 +1,11 @@
 
   <tr>
-    <td><%= content_tag :span, test.title, class: 'test-title', data: {test_id: test.id} %></br>
-      <span style="font-size:12px"> <%= test_level(test) %> | <%= test.questions.count %> </span>
+    <td>
+      <%= content_tag :span, test.title, class: 'test-title', data: {test_id: test.id} %>
       <%= render 'form_inline', test: test == @test ? @test : test %>
+      </br>
+      <span style="font-size:12px"> <%= test_level(test) %> | <%= test.questions.count %> </span>
+      
     </td>
     <td> <%= button_to t('actions.show'), admin_test_path(test), method: :get %> </td>
     <td> <%= button_to t('actions.edit'),
