feat: added progress_bar

--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,15 +1,13 @@
 <h2><%= t('.header', title: @test_passage.test.title) %></h2>
 
 <p>
-  
-</p>
-
-<p>
   <%= t('.question',
   current_question: @test_passage.current_question_number, 
   all_questions: @test_passage.test.questions.count)%> -
   <%= link_to t('actions.gist_question'), test_passage_gists_path(@test_passage), method: :post%>
 </p>
+
+<%= render 'progress_bar' %>
 
 <b><%= @test_passage.current_question.body %></b>
 
