feat: added feedback

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,6 +3,7 @@
     <p><%= t('.header') %></p>
     <%= link_to t('.author'), "https://github.com/Eduard-Gimaev/test-guru"%><br>
     <a href="https://thinknetica.com/"> <%= t('.link')%></a>
+    <p><%= link_to t('actions.feedback'), new_feedback_path %> </p> 
     <p><%= current_year %></p>
   </div>
 </div>
