--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -2,6 +2,7 @@
     <p>
       [ <%= link_to t('actions.new_test'), new_admin_test_path %> ]
       [ <%= link_to t('actions.gist_questions'), admin_gists_path %> ]
+      [ <%= link_to t('actions.feedback'), admin_feedbacks_path %> ]
     </p>
     
   <%= render 'shared/errors', resource: @test %>
