--- a/app/views/admin/badges/edit.html.erb
+++ b/app/views/admin/badges/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Admin::Badges#edit</h1>
-<p>Find me in app/views/admin/badges/edit.html.erb</p>
+<%= badge_header(@badge)%>
+<%= render 'form' %>
