--- a/app/views/admin/badges/index.html.erb
+++ b/app/views/admin/badges/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Badges#index</h1>
-<p>Find me in app/views/admin/badges/index.html.erb</p>
+<div class="row justify-content-center">
+    <p>
+      [ <%= link_to t('.new_badge'), new_admin_badge_path %> ]
+    </p>
+
+  <div class="col col-md-4">
+    <table class="table table-hover">
+      <tr style="text-align:center">
+        <th colspan="4" ><%= t('.header')%></th>
+      </tr>
+      <tr style="text-align:center" >
+        <th class="w-50"><%= t('.title') %></th>
+        <th colspan="3" ><%= t('actions.actions') %></th>
+      </tr>
+      <%= render @badges %>
+    </table>
+  </div>       
+</div>
